--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "xstream": "10.x || 11.x"
   },
   "devDependencies": {
-    "typescript": "^2.3.2",
+    "typescript": "~3.7.4",
     "xstream": "^11.1.0"
   }
 }
